--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Model Context Protocol (MCP) server to capture from an OpenCV-com
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "fastmcp>=2.11.3",
     "httpx>=0.28.1",
     "mcp[cli]>=1.4.1",
     "opencv-python>=4.11.0.86",
