--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.4.1",
     "opencv-python>=4.11.0.86",
+    "websocket-client>=1.8.0",
 ]
 
 [[project.authors]]
