--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "websocket-client>=1.8.0",
     "requests>=2.31.0,<3.0.0",
+    "pyttsx3>=2.90",
+    "sounddevice",
+    "scipy",
 ]
 
 [[project.authors]]
